@@ -108,7 +108,6 @@ static struct cmdtab mged_cmdtab[] = {
     {"cp", cmd_ged_plain_wrapper, ged_copy},
     {"cpi", f_copy_inv, GED_FUNC_PTR_NULL},
     {"d", cmd_ged_erase_wrapper, ged_erase},
-    {"dall", cmd_ged_erase_wrapper, ged_erase_all},
     {"db", cmd_stub, GED_FUNC_PTR_NULL},
     {"db_glob", cmd_ged_plain_wrapper, ged_glob},
     {"dbconcat", cmd_ged_plain_wrapper, ged_concat},
@@ -139,7 +138,6 @@ static struct cmdtab mged_cmdtab[] = {
     {"edmater", f_edmater, GED_FUNC_PTR_NULL},
     {"em", cmd_emuves, GED_FUNC_PTR_NULL},
     {"erase", cmd_ged_erase_wrapper, ged_erase},
-    {"erase_all", cmd_ged_erase_wrapper, ged_erase_all},
     {"ev", cmd_ev, GED_FUNC_PTR_NULL},
     {"e_muves", f_e_muves, GED_FUNC_PTR_NULL},
     {"eqn", f_eqn, GED_FUNC_PTR_NULL},
